Migrated to 3.5.9 from Spring boot 2.5.5